--- a/biblio.bib
+++ b/biblio.bib
@@ -1,8 +1,11 @@
 @inproceedings{rafael2014community,
-	title={Community Resources for Enabling Research in Distributed Scientific Workflows},
-	author={Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
-	booktitle={10th IEEE Int. Conference on e-Science}, 
-	year={2014},
+	title = {Community Resources for Enabling and Evaluating Research on Scientific Workflows},
+	author = {Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
+	booktitle = {10th IEEE International Conference on e-Science},
+	series = {eScience'14},
+	year = {2014},
+	pages = {177--184},
+	doi = {10.1109/eScience.2014.44}
 }
 
 @article{diaconis1979conjugate,
@@ -35,11 +38,13 @@
 }
 
 @inproceedings{da2013toward,
-  title={Toward fine-grained online task characteristics estimation in scientific workflows},
-  author={Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
-  booktitle={8th Workshop on Workflows in Support of Large-Scale Science},
-  pages={58--67},
-  year={2013},
+	author = {Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjamin and Livny, Miron},
+	title = {Toward fine-grained online task characteristics estimation in scientific workflows},
+	booktitle = {Proceedings of the 8th Workshop on Workflows in Support of Large-Scale Science},
+	series = {WORKS '13},
+	year = {2013},
+	pages = {58--67},
+	doi = {10.1145/2534248.2534254},
 }
 
 @incollection{fahringer2007askalon,
@@ -391,6 +396,7 @@ pages={612-619},
 	author={Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'ed\'eric},
 	pages={255-266}
 }
+
 @inproceedings{daSilva2011,
  author = {da Silva, Jacques A. and Rebello, Vinod E. F.},
  title = {A hybrid fault tolerance scheme for EasyGrid MPI applications},
@@ -414,13 +420,15 @@ pages={709-710},
 
 },
 
-@INPROCEEDINGS{Silva2012, 
-	author={Ferreira da Silva, R. and Glatard, T. and Desprez, F.}, 
-	booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, 
-	title={Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures}, 
-	year={2012}, 
-	pages={318-325}, 
-},
+@inproceedings{Silva2012,
+	author = {Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'ed\'eric},
+	booktitle = {2012 12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing}, 
+	series = {CCGrid'12},
+	title = {Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures},
+	year = {2012},
+	pages = {318--325},
+	doi={10.1109/CCGrid.2012.24},
+}
 
 
 @INPROCEEDINGS{Kumar2002, 
@@ -2958,13 +2966,14 @@ pages={23-30},
     year = {2005},
 }
 
-@INPROCEEDINGS{Chen2013b,
-	author={Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
-	booktitle={2013 IEEE 9th International Conference on eScience},
-	title={Balanced Task Clustering in Scientific Workflows},
-	year={2013},
-	pages={188-195},
-	keywords={Scientific workflow;data locality;load balance;task clustering},
+@inproceedings{Chen2013b,
+	author = {Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
+	booktitle = {2013 IEEE 9th International Conference on eScience},
+	series = {eScience'13},
+	title = {Balanced Task Clustering in Scientific Workflows},
+	year = {2013},
+	pages = {188--195},
+	doi = {10.1109/eScience.2013.40},
 }
 
 
@@ -3006,7 +3015,7 @@ pages={23-30},
 	year = {2013},
 	booktitle = {Euro-Par 2012: Parallel Processing Workshops},
 	volume = {7640},
-	series = {LNCS},
+	doi = {10.1007/978-3-642-36949-0\_10},
 	title = {A Science-Gateway Workload Archive to Study Pilot Jobs, User Activity, Bag of Tasks, Task Sub-steps, and Workflow Executions},
 	author = {Ferreira da Silva, Rafael and Glatard, Tristan},
 	pages = {79--88}
@@ -3040,7 +3049,21 @@ pages={23-30},
 @article{FerreiradaSilva-CCPE-2014,
 	title = {Controlling fairness and task granularity in distributed, online, non-clairvoyant workflow executions},
 	journal = {Concurrency and Computation: Practice and Experience},
-	pages = {in press},
+	volume = {26},
+	number = {14},
+	pages = {2347--2366},
 	year = {2014},
+	doi = {10.1002/cpe.3303},
 	author = {Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'{e}d\'{e}ric}
+}
+
+@article{Deelman-FGCS-2014,
+        title = {Pegasus, a Workflow Management System for Science Automation},
+        journal = {Future Generation Computer Systems},
+        volume = {},
+        number = {},
+        pages = {in press},
+        year = {2014},
+        doi = {10.1016/j.future.2014.10.008},
+        author = {Deelman, Ewa and Vahi, Karan and Juve, Gideon and Rynge, Mats and Callaghan, Scott and Maechling, Phil J. and Mayani, Rajiv and Chen, Weiwei and Ferreira da Silva, Rafael and Livny, Miron and Wenger, Kent}
 }
